fixed overflow and height of displayed menu to have a working version

--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ i {
   /* color: red; */
   font-weight: 900;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   cursor: pointer;
   color: white;
 }
@@ -182,14 +182,14 @@ i {
 .displayed-menu {
   top: 0;
   left: 0;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   position: absolute;
   color: black;
   /* border: none; */
-  /* width: 200px;
-  height: 100px; */
-  overflow: visible;
+  width: 200px;
+  /* height: 100px; */
+  overflow: auto;
   /* overflow-y: auto; */
   /* left: 50%;
   transform: translate(-50%);
